# ChangeLog for dev-perl/Linux-Inotify2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Inotify2/ChangeLog,v 1.4 2009/09/24 06:22:25 tove Exp $

*Linux-Inotify2-1.2.1 (24 Sep 2009)

  24 Sep 2009; Torsten Veller <tove@gentoo.org>
  +Linux-Inotify2-1.2.1.ebuild:
  Version bump

  01 May 2009; Torsten Veller <tove@gentoo.org> -Linux-Inotify2-1.1.ebuild:
  Cleanup

*Linux-Inotify2-1.2 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +Linux-Inotify2-1.2.ebuild:
  Version bump.

*Linux-Inotify2-1.1 (24 Feb 2008)

  24 Feb 2008; Joerg Bornkessel <hd_brummy@gentoo.org> +metadata.xml,
  +Linux-Inotify2-1.1.ebuild:
  intial ebuild
