@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Inotify2/Attic/Linux-Inotify2-1.2.1.ebuild,v 1.1 2009/09/24 06:22:25 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Inotify2/Attic/Linux-Inotify2-1.2.1.ebuild,v 1.2 2009/11/18 18:38:27 armin76 Exp $
 
 EAPI=2
 
@@ -13,7 +13,7 @@ inherit perl-module
 DESCRIPTION="scalable directory/file change notification"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~sparc ~x86"
 IUSE=""
 
 DEPEND="dev-perl/common-sense"
