@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/common-sense/Attic/common-sense-2.01.ebuild,v 1.1 2009/10/06 19:13:13 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/common-sense/Attic/common-sense-2.01.ebuild,v 1.2 2009/11/18 18:37:30 armin76 Exp $
 
 MODULE_AUTHOR="MLEHMANN"
 EAPI=2
@@ -13,4 +13,4 @@ IUSE=""
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86"
