@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Linux-Inotify2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Inotify2/ChangeLog,v 1.4 2009/09/24 06:22:25 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-Inotify2/ChangeLog,v 1.5 2009/11/18 18:38:27 armin76 Exp $
+
+  18 Nov 2009; Raúl Porcel <armin76@gentoo.org>
+  Linux-Inotify2-1.2.1.ebuild:
+  Add ~sparc wrt #286168
 
 *Linux-Inotify2-1.2.1 (24 Sep 2009)
 
